analytics-demo-data-loader/force-app/main/default/objects/ScheduledTSDetails__c/ScheduledTSDetails__c.object-meta.xml
<CustomObject>
    <label>ScheduledTSDetails</label>
    <nameField>
        <label>ScheduledTSDetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScheduledTSDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>