analytics-demo-data-loader/force-app/main/default/objects/ScheduledTSDetails__c/fields/CurrentBatchProcessId__c.field-meta.xml
<CustomField>
    <fullName>CurrentBatchProcessId__c</fullName>
    <label>CurrentBatchProcessId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>