analytics-demo-data-loader/force-app/main/default/objects/ScheduledTSDetails__c/fields/CurrentNodeIndex__c.field-meta.xml
<CustomField>
    <fullName>CurrentNodeIndex__c</fullName>
    <label>CurrentNodeIndex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>