analytics-demo-data-loader/force-app/main/default/objects/ScheduledTSDetails__c/fields/DaysToShift__c.field-meta.xml
<CustomField>
    <fullName>DaysToShift__c</fullName>
    <label>DaysToShift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>