analytics-demo-data-loader/force-app/main/default/objects/ScheduledTSDetails__c/fields/DetailJson__c.field-meta.xml
<CustomField>
    <fullName>DetailJson__c</fullName>
    <label>DetailJson</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>