analytics-demo-data-loader/force-app/main/default/objects/ScheduledTSDetails__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <label>Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>