analytics-demo-data-loader/force-app/main/default/objects/ScheduledTSDetails__c/fields/JobStatus__c.field-meta.xml
<CustomField>
    <fullName>JobStatus__c</fullName>
    <label>JobStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>