analytics-demo-data-loader/force-app/main/default/objects/ScheduledTSDetails__c/fields/QueueProcessId__c.field-meta.xml
<CustomField>
    <fullName>QueueProcessId__c</fullName>
    <label>QueueProcessId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>